Updated header and footer

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="ShopStream : One Stop Shopping Desitination"
+      content="Discover convenience at its finest with ShopStream – your ultimate one-stop shopping destination. Browse through a wide array of products, from electronics to fashion, all in one place. ShopStream makes online shopping a breeze, offering everything you need with just a click away. Experience seamless shopping today!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>ShopStream: One Stop Shopping Destination</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
